# qt_installer_demo

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
resources/: greetings.deb  packages.qrc  packages.qrc.autosave  sl_5.02-1_amd64.deb
resources/slapd/: ldap-utils_2.6.7+dfsg-1~exp1ubuntu8.2_amd64.deb  slapd_2.6.7+dfsg-1~exp1ubuntu8.2_amd64.deb
src/: default_process_runner.cpp  default_process_runner.h  i_process_runner.h  installer_service.cpp  installer_service.h  intro_widget.cpp  intro_widget.h  main.cpp  main_window.cpp  main_window.h  package_descriptor.h  package_repository.cpp  package_repository.h  package_selection_widget.cpp  package_selection_widget.h  resource_extractor.cpp  resource_extractor.h  wizard_navigation.cpp  wizard_navigation.h
tests/: CMakeLists.txt  test_package_repository.cpp  test_wizard_navigation.cpp
